# xmrig-for-android

./: .eslintrc.cjs  .gitignore  ANDROID_SETUP_REQUIRED.md  CMakeLists.txt  INSTALLATION_GUIDE.md  LEGAL_COMPLIANCE.md  THERMAL_MANAGEMENT.md  eslint.config.js  install-mining-apk.bat  package-lock.json  package.json  package.json.minimal  tsconfig.json
.github/workflows/: build-all.yml  core-modernization.yml
.npmtemp/: package-lock.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  build.gradle.bak.20250926033911  build2025.gradle
android/app/src/main/: AndroidManifest.xml  AndroidManifest2025.xml
android/app/src/main/cpp/: compute_engine_bridge.cpp  crypto_utils.cpp  trading_anarchy_jni.cpp  trading_anarchy_jni.h  trading_anarchy_native_module.cpp
android/app/src/main/cpp/include/: trading_anarchy_jni.h  trading_anarchy_native_module.h
android/app/src/main/java/com/facebook/react/: PackageList.java  ReactActivity.java  ReactApplication.java  ReactNativeHost.java  ReactPackage.java
android/app/src/main/java/com/facebook/react/bridge/: NativeModule.java  ReactApplicationContext.java  ReactContextBaseJavaModule.java  ReactMethod.java
android/app/src/main/java/com/facebook/react/uimanager/: ViewManager.java
android/app/src/main/java/com/xmrigforandroid/: MainActivity.java  MainApplication.java  MiningService.java
android/app/src/main/java/com/xmrigforandroid/data/serialization/: Configuration.kt
android/app/src/main/java/com/xmrigforandroid/events/: TemperatureUpdateEvent.java  ThermalStateChangedEvent.java
android/app/src/main/java/com/xmrigforandroid/thermal/: ThermalManager.java  ThermalMiningController.java
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml
apps/dashboard-web/: .eslintrc.js  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/dashboard-web/src/app/: layout.tsx  page.tsx
apps/dashboard-web/src/app/config/: page.tsx
apps/dashboard-web/src/app/hashrate/: page.tsx
apps/dashboard-web/src/app/policies/: page.tsx
apps/dashboard-web/src/components/: Navigation.tsx  StatusBadge.tsx
apps/mobile/src/screens/: Dashboard.tsx
docs/: architecture.md  charity-mode-architecture.md  config-schema.md  frontend-architecture.md
infra/docker/: Dockerfile.cli
infra/scripts/: build-xmrig.sh
schemas/: miner.config.schema.json  miner.config.schema.v1.0.1.json  ui.schema-metadata.json  xmrig.schema.json
scripts/: validate-schema.sh
src/components/benchmark/screens/: benchmark.screen.tsx
src/components/donation/: DonationSettingsModal.tsx
src/components/settings/containers/settings/: settings-others.card.tsx
src/core/benchmark/: benchmark.interface.ts
src/core/hooks/: index.tsx  use-benchmark.hook.ts  use-miner.hook.tsx
src/core/mining/: mining.engine.ts
src/core/providers/: DonationInfoProvider.ts  index.ts
src/core/security/: SecureMiningManager.ts  SecureWalletManager.ts
src/core/session-data/: session-data.context.tsx
src/core/settings/: settings.context.tsx  settings.interface.tsx
src/core/test/: hashrate-test.ts
src/core/utils/: HashrateFormatter.ts  HashrateParser.ts  index.ts
src/core/wallet/: wallet.config.ts
types/: custom-modules.d.ts
xmrig/: Makefile
xmrig/lib-builder/script/: BENCHMARK_FEATURE.md  BenchmarkDemo.tsx  INTEGRATION_VALIDATION_REPORT.md  ISSUES_RESOLVED_SUMMARY.md  MODERNIZATION_COMPLETE.md  PROBLEM_RESOLUTION_COMPLETE.md  README.md  build-android.ps1  build-android.sh  build.gradle  clean.sh  deployment.conf  env.sh  hwloc-build.sh  hwloc-fetch.sh  install.sh  jni.h  libuv-build.sh  libuv-fetch.sh  openssl-build.sh  openssl-fetch.sh  package.json  settings.gradle  toolchain-build.sh  toolchains_path.py  tsconfig.json  xmrig-build.sh  xmrig-fetch.sh  xmrig-mo-build.sh
xmrig/lib-builder/script/.github/workflows/: android-ci-cd.yml
xmrig/lib-builder/script/android/: CMakeLists.txt  log.h  openssl_mock.h  system_mock.h  trading_anarchy_jni_impl.cpp  trading_anarchy_native_module.cpp  trading_anarchy_native_module.h
xmrig/lib-builder/script/src/components/benchmark/: BenchmarkDemo.tsx  benchmark-navigator.tsx
xmrig/lib-builder/script/src/core/benchmark/: benchmark.interface.ts
xmrig/lib-builder/script/src/core/hooks/: use-benchmark.hook.ts
xmrig/lib-builder/script/src/core/session-data/: session-data.context.tsx
xmrig/lib-builder/script/src/core/settings/: settings.interface.ts
xmrig/lib-builder/script/src/modules/: TradingAnarchyEngine.ts
xmrig/lib-builder/script/src/types/: trading-anarchy-engine.d.ts
